kubernetes/my-app/my-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: my-app
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: my-backend-cluster-ip-service
                port:
                  number: 5000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: my-frontend-cluster-ip-service
                port:
                  number: 80
